--- a/.github/workflows/quantum.yml
+++ b/.github/workflows/quantum.yml
@@ -9,22 +9,36 @@ on:
       - '**'
 
 jobs:
-  check-conflicts:
-    name: Prevent Merge Conflicts
-    if: github.event_name == 'pull_request'
+  check-merge-conflicts:
+    name: Check Merge Conflicts
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
     steps:
-      - name: Check merge conflicts
-        uses: tzkhan/pr-merge-conflict-action@v1
+      - name: Checkout target branch
+        uses: actions/checkout@v4
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          fail-on-conflict: true
+          ref: ${{ github.base_ref }}
+          path: base
+
+      - name: Checkout PR branch
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
+          path: pr
+
+      - name: Check for merge conflicts
+        run: |
+          cd base
+          git config --global user.email "ci@example.com"
+          git config --global user.name "GitHub Action"
+          git remote add pr ../pr
+          git fetch pr
+          git merge pr/main --no-commit --no-ff || (echo "❌ Merge conflict detected!" && exit 1)
 
   build-and-test:
     name: Build & Test Notebooks
     runs-on: ubuntu-latest
-    needs: check-conflicts
-
+    needs: check-merge-conflicts
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -32,32 +46,30 @@ jobs:
       - name: Set up Miniconda
         uses: conda-incubator/setup-miniconda@v3
         with:
-          auto-activate-base: false
           activate-environment: quantum-ml
           environment-file: environment.yml
           python-version: 3.10
 
-      - name: Install additional pip packages
-        shell: bash -l {0}
+      - name: Install extras
         run: |
+          conda activate quantum-ml
           pip install papermill nbconvert
 
-      - name: Run notebooks with Papermill
-        shell: bash -l {0}
+      - name: Run Notebooks
         run: |
+          conda activate quantum-ml
           mkdir -p artifacts
           for nb in notebooks/*.ipynb; do
-            echo "Running $nb"
             papermill "$nb" "artifacts/$(basename "$nb")"
           done
 
-      - name: Convert notebooks to HTML
-        shell: bash -l {0}
+      - name: Convert Notebooks to HTML
         run: |
+          conda activate quantum-ml
           mkdir -p artifacts_html
           jupyter nbconvert --to html artifacts/*.ipynb --output-dir artifacts_html
 
-      - name: Upload HTML artifacts
+      - name: Upload HTML Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: html-reports
@@ -68,16 +80,15 @@ jobs:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: build-and-test
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Download HTML artifacts
+      - name: Download Artifacts
         uses: actions/download-artifact@v4
         with:
           name: html-reports
-          path: public/
+          path: public
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
