--- a/.github/workflows/quantum.yml
+++ b/.github/workflows/quantum.yml
@@ -75,7 +75,7 @@ jobs:
 
   deploy:
     name: Deploy to GitHub Pages
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
     needs: build-and-test
     runs-on: ubuntu-latest
     steps:
