--- a/.github/workflows/quantum.yml
+++ b/.github/workflows/quantum.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Configure Git identity
         run: |
-          git config --global user.email "jcasquejo56@gmail.com"
-          git config --global user.name "jobet1130"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "${{ github.actor }}"
 
       - name: Check for merge conflicts
         run: |
@@ -53,7 +53,7 @@ jobs:
           auto-update-conda: true
           environment-file: environment.yml
           activate-environment: quantum-ml
-          python-version: "3.9"
+          python-version: "3.10"
 
       - name: Install extras
         run: |
