fix: update environment activation to use 'conda run' for better compatibility

--- a/.github/workflows/quantum.yml
+++ b/.github/workflows/quantum.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Install extras
         run: |
-          conda activate quantum-ml
+          conda run -n quantum-ml
           pip install papermill nbconvert
 
       - name: Run notebooks with papermill
