fix: update notebook execution to use 'conda run' for improved environment handling

--- a/.github/workflows/quantum.yml
+++ b/.github/workflows/quantum.yml
@@ -62,10 +62,9 @@ jobs:
 
       - name: Run notebooks with papermill
         run: |
-          conda activate quantum-ml
           mkdir -p artifacts
           for nb in notebooks/*.ipynb; do
-            papermill "$nb" "artifacts/$(basename "$nb")"
+            conda run -n quantum-ml papermill "$nb" "artifacts/$(basename "$nb")"
           done
 
       - name: Convert notebooks to HTML
