fix: update notebook conversion to use 'conda run' for improved environment handling

--- a/.github/workflows/quantum.yml
+++ b/.github/workflows/quantum.yml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Convert notebooks to HTML
         run: |
-          conda activate quantum-ml
+          conda run quantum-ml
           mkdir -p artifacts_html
           jupyter nbconvert --to html artifacts/*.ipynb --output-dir artifacts_html
 
