--- a/.github/workflows/quantum.yml
+++ b/.github/workflows/quantum.yml
@@ -91,7 +91,7 @@ jobs:
     name: Deploy to GitHub Pages
     needs: build-and-test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    if: github.event_name == 'push' && github.ref_name == github.event.repository.default_branch
     steps:
       - uses: actions/checkout@v4
 
