--- a/.github/workflows/quantum.yml
+++ b/.github/workflows/quantum.yml
@@ -91,7 +91,7 @@ jobs:
     name: Deploy to GitHub Pages
     needs: build-and-test
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref_name == github.event.repository.default_branch
+    if: github.event_name == 'push' && github.event_name == 'pull' && github.ref_name == github.event.repository.default_branch
     steps:
       - uses: actions/checkout@v4
 
