--- a/.github/workflows/quantum.yml
+++ b/.github/workflows/quantum.yml
@@ -38,8 +38,6 @@ jobs:
           git fetch pr
           git merge FETCH_HEAD --no-commit --no-ff || (echo "❌ Merge conflict detected!" && exit 1)
 
-
-
   build-and-test:
     name: Build & Test Notebooks
     runs-on: ubuntu-latest
@@ -57,8 +55,7 @@ jobs:
 
       - name: Install extras
         run: |
-          conda run -n quantum-ml
-          pip install papermill nbconvert
+          conda run -n quantum-ml pip install papermill nbconvert
 
       - name: Run notebooks with papermill
         run: |
@@ -91,7 +88,9 @@ jobs:
     name: Deploy to GitHub Pages
     needs: build-and-test
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.event_name == 'pull' && github.ref_name == github.event.repository.default_branch
+    if: >
+      (github.event_name == 'push' || github.event_name == 'pull_request') &&
+      github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
     steps:
       - uses: actions/checkout@v4
 
@@ -117,5 +116,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-
-
