--- a/.github/workflows/quantum.yml
+++ b/.github/workflows/quantum.yml
@@ -90,7 +90,7 @@ jobs:
     runs-on: ubuntu-latest
     if: >
       (github.event_name == 'push' || github.event_name == 'pull_request') &&
-      github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
+      github.ref_name == github.event.repository.default_branch
     steps:
       - uses: actions/checkout@v4
 
