--- a/.github/workflows/quantum.yml
+++ b/.github/workflows/quantum.yml
@@ -100,13 +100,16 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Download Artifacts
+        if: steps.check-artifact.outputs.found == 'true'
         uses: actions/download-artifact@v4
         with:
           name: html-reports
           path: public
 
       - name: Deploy to GitHub Pages
+        if: steps.check-artifact.outputs.found == 'true'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
+
