Add missingno to environment and requirements files

--- a/environment.yml
+++ b/environment.yml
@@ -19,9 +19,11 @@ dependencies:
   - plotly
   - jupyterlab
   - notebook
+  - missingno
 
   - pip:
       - qiskit
       - ipywidgets
       - tqdm
       - kaleido
+  
