--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ optuna==4.4.0
 # Quantum Computing
 qiskit==2.1.1
 qiskit-machine-learning==0.8.3
+missingno==0.5.1
 
 # Notebook & Visualization
 jupyterlab==4.2.1
